# people_recognition_vision

./: .travis.yml  CMakeLists.txt  README.md  dependencies.rosinstall  mainpage.dox  manifest.xml  package.xml
include/people_recognition_vision/: artoolkit_pplm.h  breast_detector.h  conditional_particle_filter.h  conditional_particle_filter_laser.h  conditional_particle_filter_laser_ros.h  euclidean_pplm.h  face_recognizer.h  face_recognizer_pplm.h  height_detector.h  height_pplm.h  hist_tracking_skill.h  hist_user_tracking.h  nite_pplm.h  person_histogram.h  person_histogram_set.h  phs_pplm.h  ppl_gating.h  pplm_template.h  pplm_testing.h  ukf_multimodal.h  ukf_person_pose.h
launch/: all_pplm.launch  benchmark_data_fusion.launch  benchmark_pplm.launch  breast_detector.launch  conditional_particle_filter.launch  face_reco.launch  height_detector.launch  hist_tracking_nite.launch  ukf_event_marker.launch  ukf_multimodal.launch  ukf_multimodal_lite.launch  user_awareness_sample.launch
launch/old/: hist_tracking_skill.launch
scripts/: rosdep.sh
src/: CMakeLists.txt
src/artoolkit/: CMakeLists.txt  artoolkit_pplm.cpp  artoolkit_pplm.h
src/data_fusion/: CMakeLists.txt
src/data_fusion/conditional_particle_filter/: CMakeLists.txt  conditional_particle_filter.h  conditional_particle_filter_laser.h  conditional_particle_filter_laser_ros.h  test_conditional_particle_filter.cpp
src/data_fusion/ukf/: CMakeLists.txt  ppl_gating.h  ukf_genders.cpp  ukf_multimodal.cpp  ukf_multimodal.h  ukf_person_pose.h
src/euclidean_pplm/: CMakeLists.txt  euclidean_pplm.cpp  euclidean_pplm.h
src/face_recognizer/: CMakeLists.txt  face_recognizer.h  face_recognizer_pplm.cpp  face_recognizer_pplm.h  launcher_face_recognizer_add_pics.cpp  launcher_face_recognizer_ros.cpp  launcher_face_recognizer_viewer.cpp  test_face_recognizer.cpp
src/height_detector/: CMakeLists.txt  breast_detector.cpp  breast_detector.h  head_finder.h  height_benchmark.cpp  height_detector.h  height_pplm.cpp  height_pplm.h  template_regression.m
src/nite/: CMakeLists.txt  nite_pplm.cpp  nite_pplm.h
src/person_histogram_set/: CMakeLists.txt  hist_tracking_nite_skill.cpp  hist_tracking_skill.h  hist_tracking_vision_skill.cpp  hist_user_tracking.h  person_histogram.h  person_histogram_set.h  phs_pplm.cpp  phs_pplm.h  test_person_histogram_set.cpp
src/pplm_benchmarking/: CMakeLists.txt  pplm_benchmarker.cpp
srv/: MatchPPL.srv
test/: CMakeLists.txt  gtest_breast_detector.cpp  gtest_euclidean_pplm.cpp  gtest_face_recognizer.cpp  gtest_face_recognizer_pplm.cpp  gtest_head_finder.cpp  gtest_height_detector.cpp  gtest_height_pplm.cpp  gtest_hist_tracking_skill.cpp  gtest_nite_pplm.cpp  gtest_person_histogram.cpp  gtest_person_histogram_set.cpp  gtest_phs_pplm.cpp  gtest_ppl_gating.cpp  gtest_ppl_matcher.cpp  gtest_ukf_multimodal.cpp
