<?xml version="1.0"?>
<package format="2">
  <name>people_recognition_vision</name>
  <version>0.0.0</version>
  <description>
    people_recognition_vision is a set of skills used for recognizing people.
  </description>
  <maintainer email="arnaud.a.ramey@gmail.com">Arnaud Ramey</maintainer>
  <license>LGPLv3</license>
  <url type="website">http://ros.org/wiki/people_recognition_vision</url>
  <buildtool_depend>catkin</buildtool_depend>
  <!-- dependencies -->
  <depend>roscpp</depend>
  <depend>openni_camera</depend>
  <depend>openni_tracker</depend>
  <depend>openni_launch</depend>

  <!-- AD -->
  <depend>people_msgs</depend>
  <depend>vision_utils</depend>
  <depend>kinect</depend>

  <export>
    <!-- nodelet plugin="${prefix}/nodelets.xml" /-->
    <cpp cflags="-I${prefix} -I${prefix}/build"
         lflags="-L${prefix}/lib -Wl,-rpath,${prefix}/lib"/>
    <rosdoc config="rosdoc.yaml" />
  </export>
</package>







