<?xml version="1.0"?>
<package format="2">
  <name>people_recognition_vision</name>
  <version>0.0.0</version>
  <description>
    people_recognition_vision is a set of skills used for recognizing people.
  </description>
  <maintainer email="arnaud.a.ramey@gmail.com">Arnaud Ramey</maintainer>
  <license>LGPLv3</license>
  <url type="website">http://ros.org/wiki/people_recognition_vision</url>
  <buildtool_depend>catkin</buildtool_depend>
  <!-- Ubuntu packages dependencies:
       get the keys using "rosdep db"  -->
  <depend>libgsl</depend>
  <depend>libblas-dev</depend>
  <!-- ROS -->
  <depend>dynamic_reconfigure</depend>
  <depend>message_generation</depend>
  <depend>people_msgs</depend>
  <!-- AD:
      these should be in the dependencies.rosinstall of the package -->

  <export>
    <rosdoc config="rosdoc.yaml" />
  </export>
</package>
